--- a/webapp/WEB-INF/web.xml
+++ b/webapp/WEB-INF/web.xml
@@ -1,7 +1,10 @@
-<web-app xmlns="http://java.sun.com/xml/ns/javaee" version="2.5">
-	<web-app>
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns="http://java.sun.com/xml/ns/javaee"
+		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		 xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+		 version="3.0">
 
-		<servlet>
+           <servlet>
 			<servlet-name>centralservlet</servlet-name>
 			<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 			<init-param>
@@ -17,10 +20,6 @@
 
 		<servlet-mapping>
 			<servlet-name>centralservlet</servlet-name>
-			<url-pattern>/*</url-pattern>
+			<url-pattern>/</url-pattern>
 		</servlet-mapping>
-
-
-
-	</web-app>
 </web-app>
