--- a/pom.xml
+++ b/pom.xml
@@ -42,11 +42,13 @@
             <artifactId>jstl</artifactId>
             <version>1.2</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+        <!-- https://mvnrepository.com/artifact/log4j/log4j -->
+
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
+            <artifactId>log4j</artifactId>
             <version>2.11.1</version>
+            <type>pom</type>
         </dependency>
 
     </dependencies>
@@ -64,10 +66,7 @@
             <plugin>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>3.0.0</version>
-                <configuration>
-                    <warSourceDirectory>WebContent</warSourceDirectory>
-                </configuration>
-            </plugin>
+             </plugin>
         </plugins>
         <finalName>Zomato</finalName> <!-- added to remove Version from WAR file -->
     </build>
