--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -20,6 +20,6 @@
 
 		<servlet-mapping>
 			<servlet-name>centralservlet</servlet-name>
-			<url-pattern>/</url-pattern>
+			<url-pattern>/*</url-pattern>
 		</servlet-mapping>
 </web-app>
