--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,11 @@
             <version>2.11.1</version>
             <type>pom</type>
         </dependency>
+        <dependency>
+            <groupId>com.couchbase.client</groupId>
+            <artifactId>java-client</artifactId>
+            <version>2.7.2</version>
+        </dependency>
 
     </dependencies>
 
