Db migrated to Mongo
mongo configured

--- a/src/main/resources/properties/DEV/db.properties
+++ b/src/main/resources/properties/DEV/db.properties
@@ -1,4 +1,5 @@
-couchbase.cluster=0.0.0.0:8091
-couchbase.cluster.username=admin
-couchbase.cluster.password=codepir
-couchbase.cluster.bucketname =TestBucket
+mongo.cluster=mongodb://localhost:27017
+mongo.cluster.username=admin
+mongo.cluster.password=codepir
+mongo.dbname =db
+mongo.db.collections=Users:Products:Orders
