reverse indexing done for cuisines to restaurants

--- a/src/main/resources/properties/DEV/db.properties
+++ b/src/main/resources/properties/DEV/db.properties
@@ -2,4 +2,4 @@ mongo.cluster=mongodb://localhost:27017
 mongo.cluster.username=admin
 mongo.cluster.password=codepir
 mongo.dbname =db
-mongo.db.collections=Users:Products:Orders:Restaurant
+mongo.db.collections=Users:Products:Orders:Restaurant:Cui2Rest
